--- a/src/components/login/login.module.css
+++ b/src/components/login/login.module.css
@@ -1,10 +1,35 @@
-.login-wrapper {
-    height: 100vh;
+.loginWrapper {
+    padding-top: 92px;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    flex-direction: column;
+    font-family: 'HelveticaNeueCyr';
+    font-weight: 400;
+    font-size: 16px;
 }
 
-@media (min-width: 768px) or (orientation: portrait) {
-    .login-wrapper {}
+.title {
+    font-size: 23px;
+    color: #5AE3FE;
+    margin-bottom: 122px;
+}
+
+.column {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.square {
+
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 0 160px 200px 310px;
+    border-color: transparent transparent #5AE3FE transparent;
+    transform: translateX(-102px);
+    /*
+    clip-path: polygon(83% 67%, 0% 100%, 100% 100%);
+    position: absolute;
+    bottom: 0; */
 }
