--- a/src/components/login/login.module.css
+++ b/src/components/login/login.module.css
@@ -1,3 +1,13 @@
+.wrapper{ 
+    position: relative;
+    overflow: hidden;
+    background: url('../../assets/images/login/2.png');
+    background-repeat: no-repeat;
+    background-size: initial;
+    background-position: bottom;
+
+ }
+
 .loginWrapper {
     padding-top: 92px;
     display: flex;
@@ -5,6 +15,7 @@
     font-family: 'HelveticaNeueCyr';
     font-weight: 400;
     font-size: 16px;
+    
 }
 
 .title {
@@ -16,20 +27,101 @@
 .column {
     height: 100vh;
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    /* flex-direction: column;
+    justify-content: space-between; */
+}
+.ladingText {
+    font-size: 15px;
+    font-family: "HelveticaNeueCyr";
+    color: rgb(32, 57, 90);
+    font-weight: bold;
+    line-height: 1.667;
+    margin-bottom: 42px;
+  }
+
+  .loginCaption{
+    font-size: 12px;
+    font-family: "HelveticaNeueCyr";
+    color: rgb(185, 195, 200);
+    line-height: 5;
+  }
+  
+  
+  
+.input {
+    border:none;
+    border-bottom: 2px solid rgb(121, 215, 254);
+    margin-right: 15px;
+  }
+.input:focus{
+    outline: none;
+  }
+  
+
+.loginBtn {
+    font-size: 30px;
+    color: rgb(255, 255, 255);
+    font-weight: bold;
+    line-height: 0.367;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: rgb(228, 132, 44);
+    box-shadow: 0px 8px 20px 0px rgba(227, 126, 42, 0.2);
+    border: none;
 }
 
-.square {
 
-    width: 0;
-    height: 0;
-    border-style: solid;
-    border-width: 0 160px 200px 310px;
-    border-color: transparent transparent #5AE3FE transparent;
-    transform: translateX(-102px);
-    /*
-    clip-path: polygon(83% 67%, 0% 100%, 100% 100%);
-    position: absolute;
-    bottom: 0; */
+
+@media (min-width: 768px) {
+    .wrapper{
+        background: url('../../assets/images/login/tablet-bg.png');
+        background-repeat: no-repeat;
+        background-size:cover;
+    }
+
+    .loginWrapper{
+        padding-top: 340px;
+    }
+    .ladingText {
+        font-size: 30px;
+        width: 498px;
+        line-height: 1.4;
+      }
+
+      .loginCaption {
+        font-size: 18px;
+        line-height: 3.333;
+      }
+      .loginBtn {
+        width: 70px;
+        height: 70px;
+
+    }
+
+    .inputSectionWrapper{
+        display: flex;
+        align-items: center;
+    }
+    
+    .loginCaption{
+        margin-right: 12px;
+    }
+      
+}
+
+/* DESKTOP */
+@media (min-width: 1280px) {
+.square{
+    display: none;
+}
+.wrapper{
+    background: url('../../assets/images/login/login_page_bg.d34adb7c.png');
+    background-repeat: no-repeat;
+    background-size:cover;
+}
+.loginWrapper{
+    padding-top: 240px;
+}
+
 }
