--- a/src/stylesheet/app.css
+++ b/src/stylesheet/app.css
@@ -1,5 +1,5 @@
 html {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 /* body {
@@ -12,65 +12,63 @@ html {
 *,
 *::before,
 *::after {
-    box-sizing: inherit;
-    margin: 0;
-    padding: 0;
+  box-sizing: inherit;
+  margin: 0;
+  padding: 0;
 }
 
 ul,
 ol,
 li {
-    list-style: none;
+  list-style: none;
 }
 
 h1,
 h2,
 h3,
 h4 {
-    margin: 0;
+  margin: 0;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
-
 ​img {
-    display: block;
-    max-width: 100%;
-    height: auto;
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
 
 button:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 button:focus {
-    outline: none;
+  outline: none;
 }
 
 .container {
-    width: 246px;
-    margin: 0 auto;
-    outline: 1px solid teal;
+  width: 246px;
+  margin: 0 auto;
 }
 
-@media (min-width: 768px) or (orientation: portrait) {
-    .container {
-        width: 710px;
-    }
+@media (min-width: 768px) {
+  .container {
+    width: 710px;
+  }
 }
 
 @media (min-width: 1280px) {
-    .container {
-        max-width: 90%;
-    }
+  .container {
+    max-width: 90%;
+  }
 }
 
 @media (orientation: landscape) {
-    .container {
-        width: 933px;
-    }
+  .container {
+    width: 933px;
+  }
 }
 
 /* @media (orientation: portrait) {
