--- a/src/components/card/card.module.css
+++ b/src/components/card/card.module.css
@@ -1,8 +1,8 @@
 .cardMain {
+  background: rgb(255, 255, 255);
   width: 285px;
   height: 264px;
   border-radius: 10px;
-  background-color: rgb(255, 255, 255);
   box-shadow: 0px 3px 20px 0px rgba(21, 57, 90, 0.08);
   list-style: none;
   padding-top: 24px;
@@ -20,8 +20,8 @@
   font-weight: bold;
   line-height: 1.556;
   text-align: center;
+  margin-top: 50px;
 }
-
 .cardDate {
   font-size: 15px;
   font-family: 'HelveticaNeueCyr';
@@ -35,14 +35,13 @@
   align-items: baseline;
   margin-bottom: 45px;
 }
-
 .cardSelect {
   margin-left: 15px;
   width: 120px;
   font-size: 15px;
   font-family: 'HelveticaNeueCyr';
-  color: rgb(185, 195, 200);
   border: none;
+  color: rgb(185, 195, 200);
 }
 .cardStarIcon {
   margin-right: 15px;
@@ -52,13 +51,15 @@
   justify-content: space-between;
   outline: none;
 }
-
 .hardLevelContainer div {
   border: none;
   box-shadow: none;
 }
 .hardLevelContainer > div > div:nth-child(3) {
   border: 1px solid hsl(0, 0%, 80%);
+  position: absolute;
+  top: -10px;
+  left: -10px;
 }
 .hardLevelContainer > div > div {
   padding: 0;
@@ -68,19 +69,66 @@
   padding: 0;
   margin: 0;
 }
-
-/* .card_cardStarIcon:hover{
-    fill:red;
-
-} */
-
+starContainer:hover {
+  background-color: #00d7ff;
+  box-shadow: 15px 15px 15px 15px #00d7ff;
+}
 .cardStarIcon:hover {
-  filter: drop-shadow(0px 3px 7px 0px rgba(121, 215, 254, 0.43));
+  filter: drop-shadow(15px 15px 15px 15px #00d7ff);
   filter: url(../../assets/images/icons/star.svg) invert(0.3) sepia(0)
     saturate(1) hue-rotate(0deg) brightness(1);
   opacity: 0.3;
+  box-shadow: 15px 15px 15px 15px #00d7ff;
 }
-
 .cardStyleStar:hover {
-  box-shadow: 0px 3px 7px 0px rgba(121, 215, 254, 0.43);
+  box-shadow: 0px 3px 7px 0px #00d7ff;
+}
+.starContainer {
+  box-shadow: 0px 3px 7px 0px #00d7ff;
+}
+.cardSelectCategory {
+  font-size: 11px;
+  font-family: 'HelveticaNeueCyr';
+  color: rgb(182, 196, 202);
+  text-transform: uppercase;
+  line-height: 1;
+}
+.cardSelectCategory div {
+  border: none;
+  box-shadow: none;
+}
+.cardSelectCategory > div > div {
+  padding: 0;
+  margin: 0;
+}
+.cardSelectCategory > div > div:nth-child(3) > div {
+  padding: 0;
+  margin: 0;
+}
+.kek > div > div > div > div:last-child {
+  background-color: transparent;
+}
+.kek > div > div > div:last-child > span {
+  display: none;
+}
+.kek > div > div > div:last-child > div > svg {
+  display: none;
+}
+.cardSelectCategory > div:nth-child(3) {
+  border: 1px solid hsl(0, 0%, 80%);
+}
+.hardLevelContainer div {
+  border: none;
+  box-shadow: none;
+}
+.hardLevelContainer > div > div {
+  padding: 0;
+  margin: 0;
+}
+.hardLevelContainer > div > div:nth-child(3) > div {
+  padding: 0;
+  margin: 0;
+}
+.cardSelectCategory div {
+  border: none;
 }
