--- a/src/components/card/card.module.css
+++ b/src/components/card/card.module.css
@@ -15,7 +15,7 @@
 
 .cardTitle {
   font-size: 18px;
-  font-family: 'HelveticaNeueCyr';
+  font-family: "HelveticaNeueCyr";
   color: rgb(40, 40, 40);
   font-weight: bold;
   line-height: 1.556;
@@ -28,9 +28,44 @@
   padding-right: 20px;
 }
 
+.inputTitle {
+  font-size: 18px;
+  font-family: "HelveticaNeueCyr";
+  color: rgb(40, 40, 40);
+  font-weight: bold;
+  line-height: 1.556;
+  text-align: center;
+  margin-top: 50px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  padding-left: 20px;
+  padding-right: 20px;
+  border: none;
+  outline: none;
+}
+
+.inputTitleEdit {
+  font-size: 18px;
+  font-family: "HelveticaNeueCyr";
+  color: rgb(40, 40, 40);
+  font-weight: bold;
+  line-height: 1.556;
+  text-align: center;
+  margin-top: 50px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  padding-left: 20px;
+  padding-right: 20px;
+  outline: none;
+  border: none;
+  border-bottom: 1px solid black;
+}
+
 .cardDate {
   font-size: 15px;
-  font-family: 'HelveticaNeueCyr';
+  font-family: "HelveticaNeueCyr";
   color: rgb(185, 195, 200);
   line-height: 0.733;
   padding-right: 5px;
@@ -45,7 +80,7 @@
   margin-left: 15px;
   width: 120px;
   font-size: 15px;
-  font-family: 'HelveticaNeueCyr';
+  font-family: "HelveticaNeueCyr";
   border: none;
   color: rgb(185, 195, 200);
 }
@@ -94,7 +129,7 @@ starContainer:hover {
 }
 .cardSelectCategory {
   font-size: 11px;
-  font-family: 'HelveticaNeueCyr';
+  font-family: "HelveticaNeueCyr";
   color: rgb(182, 196, 202);
   text-transform: uppercase;
   line-height: 1;
