--- a/src/components/card/card.module.css
+++ b/src/components/card/card.module.css
@@ -43,6 +43,8 @@
   padding-right: 20px;
   border: none;
   outline: none;
+  margin: 0 auto;
+  display: block;
 }
 
 .inputTitleEdit {
@@ -61,6 +63,8 @@
   outline: none;
   border: none;
   border-bottom: 1px solid black;
+  margin: 0 auto;
+  display: block;
 }
 
 .cardDate {
