--- a/src/components/card/card.module.css
+++ b/src/components/card/card.module.css
@@ -15,7 +15,7 @@
 
 .cardTitle {
   font-size: 18px;
-  font-family: "HelveticaNeueCyr";
+  font-family: 'HelveticaNeueCyr';
   color: rgb(40, 40, 40);
   font-weight: bold;
   line-height: 1.556;
@@ -30,7 +30,7 @@
 
 .inputTitle {
   font-size: 18px;
-  font-family: "HelveticaNeueCyr";
+  font-family: 'HelveticaNeueCyr';
   color: rgb(40, 40, 40);
   font-weight: bold;
   line-height: 1.556;
@@ -47,7 +47,7 @@
 
 .inputTitleEdit {
   font-size: 18px;
-  font-family: "HelveticaNeueCyr";
+  font-family: 'HelveticaNeueCyr';
   color: rgb(40, 40, 40);
   font-weight: bold;
   line-height: 1.556;
@@ -65,7 +65,7 @@
 
 .cardDate {
   font-size: 15px;
-  font-family: "HelveticaNeueCyr";
+  font-family: 'HelveticaNeueCyr';
   color: rgb(185, 195, 200);
   line-height: 0.733;
   padding-right: 5px;
@@ -80,13 +80,14 @@
   margin-left: 15px;
   width: 120px;
   font-size: 15px;
-  font-family: "HelveticaNeueCyr";
+  font-family: 'HelveticaNeueCyr';
   border: none;
   color: rgb(185, 195, 200);
 }
 
 .cardStarIcon {
-  margin-right: 15px;
+  margin-right: 30px;
+  margin-top: 5px;
 }
 .hardLevelContainer {
   display: flex;
@@ -125,12 +126,21 @@ starContainer:hover {
 .cardStyleStar:hover {
   box-shadow: 0px 3px 7px 0px #00d7ff;
 }
+.starIcon {
+  fill: #b9c3c8;
+}
+
+.starContainer:hover .starIcon {
+  fill: #00d7ff;
+}
+
 .starContainer {
-  box-shadow: 0px 3px 7px 0px #00d7ff;
+  background-color: transparent;
+  border: none;
 }
 .cardSelectCategory {
   font-size: 11px;
-  font-family: "HelveticaNeueCyr";
+  font-family: 'HelveticaNeueCyr';
   color: rgb(182, 196, 202);
   text-transform: uppercase;
   line-height: 1;
@@ -155,11 +165,12 @@ starContainer:hover {
 }
 .kek > div > div > div:last-child > div > svg {
   display: none;
+  position: absolute;
 }
 .cardSelectCategory > div:nth-child(3) {
   border: 1px solid hsl(0, 0%, 80%);
 }
-.hardLevelContainer div {
+/* .hardLevelContainer div {
   border: none;
   box-shadow: none;
 }
@@ -173,4 +184,165 @@ starContainer:hover {
 }
 .cardSelectCategory div {
   border: none;
+} */
+
+.challengeCardMain {
+  border-radius: 10px;
+  background-color: rgb(32, 57, 90);
+  box-shadow: 0px 3px 20px 0px rgba(21, 57, 90, 0.08);
+  width: 285px;
+  height: 264px;
+  border-radius: 10px;
+  box-shadow: 0px 3px 20px 0px rgba(21, 57, 90, 0.08);
+  list-style: none;
+  padding-top: 24px;
+  padding-bottom: 24px;
+}
+.challengeHardLevelContainer {
+  display: flex;
+  justify-content: space-between;
+  outline: none;
+}
+.challengeHardLevelContainer div {
+  border: none;
+  box-shadow: none;
+}
+.challengeHardLevelContainer > div > div:nth-child(3) {
+  border: 1px solid hsl(0, 0%, 80%);
+  position: absolute;
+  top: -10px;
+  left: -10px;
+}
+.challengeHardLevelContainer > div > div {
+  padding: 0;
+  margin: 0;
+}
+.challengeHardLevelContainer > div > div:nth-child(3) > div {
+  padding: 0;
+  margin: 0;
+}
+challengeHardLevelContainer:hover {
+  background-color: #00d7ff;
+  box-shadow: 15px 15px 15px 15px #00d7ff;
+}
+.challengeHardLevelContainer > div > div > div {
+  background-color: rgb(32, 57, 90);
+  padding-left: 10px;
+}
+.challengeHardLevelContainer > div > div > div > div > div:nth-child(1) {
+  color: rgb(185, 195, 200);
+}
+.challengeHardLevelContainer > div > div > div > div > div:last-child {
+  background-color: transparent;
+}
+.challengeHardLevelContainer > div > div > div > div:last-child > span {
+  display: none;
+}
+.challengeHardLevelContainer > div > div > div > div:last-child > div > svg {
+  display: none;
+}
+.cardSelectCategory > div:nth-child(3) {
+  border: 1px solid hsl(0, 0%, 80%);
+}
+
+.challenge {
+  font-size: 13px;
+  font-family: 'HelveticaNeueCyr';
+  color: rgb(123, 138, 164);
+  font-weight: bold;
+  text-transform: uppercase;
+  line-height: 0.846;
+  padding-top: 30px;
+  text-align: center;
+}
+.challengrCardTitle {
+  font-size: 18px;
+  font-family: 'HelveticaNeueCyr';
+  color: white;
+  font-weight: bold;
+  line-height: 1.556;
+  text-align: center;
+  padding-top: 10px;
+  padding-bottom: 5px;
+}
+.container {
+  display: flex;
+  justify-content: space-between;
+  /* align-items: flex-end; */
+}
+.imgCont {
+  display: flex;
+  justify-content: space-between;
+}
+.imgCont span {
+  background-color: rgb(123, 138, 164);
+  margin-top: 4px;
+  margin-bottom: 10px;
+}
+.btn {
+  border: none;
+  background-color: transparent;
+  font-size: 15px;
+  font-family: 'HelveticaNeueCyr';
+  color: rgb(0, 215, 255);
+  text-transform: uppercase;
+  line-height: 0.733;
+  padding-right: 25px;
+  padding-left: 20px;
+}
+.btnDel {
+  background-color: transparent;
+  border: none;
+  padding-right: 12px;
+}
+.sel {
+  width: 160px;
+}
+.sel > div > div > div > div:last-child {
+  background-color: transparent;
+}
+.sel > div > div > div:last-child > span {
+  display: none;
+}
+.sel > div > div > div:last-child > div > svg {
+  display: none;
+}
+.delite {
+  fill: #da0837;
+  border: rgb(32, 57, 90);
+  background-color: rgb(32, 57, 90);
+}
+.delite:hover {
+  fill: #aa273b;
+}
+
+.Btn {
+  width: 24px;
+  height: 24px;
+  background-color: transparent;
+  border: none;
+}
+
+.edit,
+.save {
+  fill: #00d7ff;
+}
+
+.delit {
+  fill: #da0837;
+}
+
+.done {
+  fill: #24d40c;
+}
+.editBtn:hover .edit,
+.saveBtn:hover .save {
+  fill: #47aad5;
+}
+.deliteBtn:hover .delit {
+  fill: #aa273b;
+}
+
+.doneBtn:hover .done {
+  fill: #439945;
 }
