--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -1,7 +1,7 @@
 .headerContainer {
     width: 100%;
     background-color: #00365b;
-    
+
 }
 
 .headerUserWrapper {
@@ -11,8 +11,9 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    
+
 }
+
 /* .cardStarIcon:hover {
 
     filter: invert(0.3) sepia(0) saturate(1) hue-rotate(0deg) brightness(1);
@@ -27,7 +28,7 @@
     width: 112px;
     display: flex;
     justify-content: space-between;
-    
+
 }
 
 .headerUserInfo__list {
@@ -57,20 +58,59 @@
     border-radius: 50%;
     box-shadow: 0px 6px 13px 0px rgba(121, 215, 254, 0.43);
     background-color: #00daff;
-
-    
 }
 
+.headerChellenge::after {
+    color: wheat;
+    right: 150px;
+    top: 55px;
+    position: absolute;
+    margin: 0 auto;
+    display: block;
+    width: 170px;
+    /* height: 3px; */
+    content: "You've got new challenge";
+    opacity: 0;
+    visibility: hidden;
+
+}
+
+.headerChellenge:hover::after {
+    opacity: 1;
+    visibility: visible;
+}
 
 .buttonLogOut {
-    
+
     transform: rotate(180deg);
     border: none;
     background-color: inherit;
     width: 20px;
+
+}
+
+.buttonLogOut::after {
+    transform: rotate(180deg);
+    color: wheat;
+    right: -75px;
+    bottom: 20px;
+    position: absolute;
+    margin: 0 auto;
+    display: block;
+    width: 170px;
+    height: 3px;
+    content: "Log out";
+    opacity: 0;
+    visibility: hidden;
+
+}
+.buttonLogOut:hover::after {
+    opacity: 1;
+    visibility: visible;
 }
 
 @media (min-width: 768px) {
+
 
     .buttonLogOut {
         align-self: center;
@@ -115,7 +155,7 @@
     .headerUserInfo__listItem_FullNickname {
         color: rgb(128, 128, 128);
         font-weight: 600;
-        font-family:  HelveticaNeueCyr, Arial, sans-serif;
+        font-family: HelveticaNeueCyr, Arial, sans-serif;
         margin-left: 16px;
         display: block;
     }
@@ -138,6 +178,3 @@
 }
 
 @media (orientation: landscape) {}
-
-
-
