--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -55,6 +55,16 @@
   box-shadow: 0px 6px 13px 0px rgba(121, 215, 254, 0.43);
   background-color: #00daff;
 }
+.headerChellengeDead {
+  height: 22px;
+  width: 22px;
+  background-image: url(../../assets/images/icons/trophy.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+  border-radius: 50%;
+  box-shadow: 0px 6px 13px 0px rgba(121, 215, 254, 0.43);
+  background-color: #1d3236;
+}
 
 .buttonLogOut {
   transform: rotate(180deg);
