--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -11,11 +11,6 @@
   justify-content: space-between;
   align-items: center;
 }
-/* .cardStarIcon:hover {
-
-    filter: invert(0.3) sepia(0) saturate(1) hue-rotate(0deg) brightness(1);
-    opacity: 0.3;
-   } */
 
 .headerLogo {
   width: 68px;
@@ -62,8 +57,7 @@
   background-position: center;
   background-repeat: no-repeat;
   border-radius: 50%;
-  box-shadow: 0px 6px 13px 0px rgba(121, 215, 254, 0.43);
-  background-color: #1d3236;
+  background-color: #3e4e6c;
 }
 
 .buttonLogOut {
@@ -81,6 +75,12 @@
   }
 
   .headerChellenge {
+    margin-right: 32px;
+    width: 35px;
+    height: 35px;
+  }
+
+  .headerChellengeDead {
     margin-right: 32px;
     width: 35px;
     height: 35px;
