--- a/src/components/todoList/todoList.module.css
+++ b/src/components/todoList/todoList.module.css
@@ -8,6 +8,7 @@
   border-top: 2px dashed #f2f3f7;
   margin-bottom: 20px;
 }
+
 .borderWrapVis {
   position: relative;
   margin-bottom: 20px;
@@ -61,6 +62,9 @@
   height: 12px;
   background: center no-repeat url('../../assets/images/icons/dropdownHide.png');
   border: none;
+}
+.todosSectionList > li:not(:last-child) {
+  margin-bottom: 22px;
 }
 
 @media (min-width: 768px) {
